create heat for uncolonized neighbours to simulate a living universe